fixing title spacing

--- a/src/components/AdminPage/AdminPage.scss
+++ b/src/components/AdminPage/AdminPage.scss
@@ -25,7 +25,7 @@
 
 .text-buttons {
   width: 100%;
-  margin: 0px;
+  margin: auto;
 }
 
 @media screen and (max-width: 750px) {
