--- a/src/components/AdminPage/EditAddTeamPanel/EditAddTeam.scss
+++ b/src/components/AdminPage/EditAddTeamPanel/EditAddTeam.scss
@@ -40,6 +40,7 @@
   text-overflow: ellipsis;
   width: 180px;
   overflow: hidden;
+  text-align: center;
   padding-top: 20px;
   padding-left: 10px;
   text-align: left;
